Fix issue where wave is not centered

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
   overflow-x: hidden;
   width: 100vw;
+  font-size: 1rem;
 }
 
 #configure{
@@ -40,7 +41,6 @@ input{
   display: inline-block;
   word-wrap: break-word;
   font-size: 1.51rem;
-  text-align: center;
 }
 
 #infoCard{
